--- a/static/css/main.css
+++ b/static/css/main.css
@@ -467,3 +467,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+
+.logo {
+    height: 3.2rem;
+    width: 3.2rem;
+}
