--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block head %} {{ super() }} {% endblock head %} {%
+block title %} Home {% endblock title %} {% block body %}
 
-{% block head %}
-    {{ super() }}
-{% endblock head %}
 
-{% block title %}
-    Home
-{% endblock title %}
 
-{% block body %}
 {% endblock body %}
