some changes :smile:

--- a/templates/base.html
+++ b/templates/base.html
@@ -154,5 +154,6 @@ themeToggleBtn.addEventListener('click', function() {
     
 });
     </script>
+    <script src="../static/js/script.js"></script>
   </body>
 </html>
