--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %} {% block head %} {{ super() }} {% endblock head %} {%
 block title %} Home {% endblock title %} {% block body %}
 
+<h1 class="display-1 text-center my-3">Your Supercharged <b>URL Shortener</b>.</h1>
+<div class="buttons">
+  <button class="button is-primary is-outlined mx-auto my-4" onclick="login()">Get Started</button>
+  
+</div>
 
 
 {% endblock body %}
