--- a/templates/login.html
+++ b/templates/login.html
@@ -64,7 +64,7 @@ body %}
         >Lost Password?</a
       >
     </div>
-            <button type="submit" class="w-full text-black bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login to your account</button>
+            <button type="submit" class="w-full text-white is-primary button">Login to your account</button>
 
       
     <div class="text-sm font-medium text-gray-500 dark:text-gray-300">
