--- a/templates/register.html
+++ b/templates/register.html
@@ -54,7 +54,7 @@
       />
     </div>
     
-            <button type="submit" class="w-full text-black bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Register Now</button>
+            <button type="submit" class="w-full text-white button is-primary">Register Now</button>
 
       
     <div class="text-sm font-medium text-gray-500 dark:text-gray-300">
