frontend almost ready

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,65 @@
 {% extends 'base.html' %}
 {% block title %}
     Contact
-{% endblock title %}Contact
+{% endblock title %}
+{% block body %}
+
+<div class="container my-3">
+    <form action="post">
+
+        <div class="field">
+  <label class="label">Name</label>
+  <div class="control">
+    <input class="input" type="text" placeholder="Bhawesh Chaudhary">
+  </div>
+</div>
+
+<div class="field">
+  <label class="label">Email</label>
+  <div class="control has-icons-left has-icons-right">
+    <input class="input" type="email" placeholder="self@bhawesh.me" value="">
+    <span class="icon is-small is-left">
+      <i class="fas fa-envelope"></i>
+    </span>
+    <span class="icon is-small is-right">
+      <i class="fas fa-exclamation-triangle"></i>
+    </span>
+  </div>
+  <!-- <p class="help is-danger">This email is invalid</p> -->
+</div>
+
+<div class="field">
+  <label class="label">Subject</label>
+  <div class="control">
+    <div class="select">
+      <select>
+        <option>General Enquiry</option>
+        <option>Sales</option>
+        <option>Technical Help</option>
+      </select>
+    </div>
+  </div>
+</div>
+
+<div class="field">
+  <label class="label">Message</label>
+  <div class="control">
+    <textarea class="textarea" placeholder="Enter your message"></textarea>
+  </div>
+</div>
+
+
+<div class="field is-grouped">
+  <div class="control">
+    <button class="button is-link">Submit</button>
+  </div>
+  <div class="control">
+    <button class="button is-link is-light">Reset</button>
+  </div>
+</div>
+
+
+    </form>
+</div>
+{% endblock body %}
+
