--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,16 +5,38 @@
     
 {% block body %}
   <div class="container"> 
-<h1 class="display-1 text-center my-3">Paste <b>Long Link</b> Here.</h1>
+<h1 class="display-1 text-center my-3">Paste <b>Long Link</b> Here</h1>
     <input class="input is-primary is-rounded is-large my-3 mx-auto" type="text" placeholder="https://www.youtube.com/watch?v=swHI1H7DVsQsjsjsjsjsjwisks">
 
 <div class="buttons">
   <button class="button is-success my-3 mx-auto">Generate Short URL</button>
 </div>
 
-<h1 class="display-5 text-center my-5">Use this <b>Short URL</b>.</h1>
+<h1 class="display-5 text-center my-5">Use this <b>Short URL</b></h1>
 <div class="control">
   <input class="input is-rounded is-primary my-3 is-large" type="text" value="sh.rt/uhjcr" readonly>
 </div>
+<h1 class="display-5 text-center my-5">Your <b>DATA</b></h1>
+<table class="table my-4">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Description</th>
+      <th scope="col">SHORT LINK</th>
+      <th scope="col">Actual Link</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Coding youtube videos</td>
+      <td>sh.rt/uhj</td>
+      <td>https://www.youtube.com/watch?v=swHI1H7DVsQ&t=2296s&ab_channel=hushsa</td>
+    </tr>
+    
+  </tbody>
+</table>
+
 </div> 
 {% endblock body %}
+
