--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
     <title>{% block title %} {% endblock title %} - shortmyurl</title>
     {% endblock head %}
   </head>
-  <body>
+  <body style="position: relative;">
     <!-- Navbar Starts Here -->
 
     <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -99,7 +99,9 @@
     {% block body %} {% endblock body %}
 
   
-
+<footer>
+  &copy; Shortly. All Rights Reserved.
+</footer>
 
     <!-- flowbit js -->
     <script src="../static/node_modules/flowbite/dist/flowbite.js"></script>
