--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,17 @@
 {% endblock title %}
 
 {% block body %}
+
+<style>
+  footer{
+    position:fixed;
+  left:0px;
+  bottom:0px;
+  height:30px;
+  text-align: center;
+  width:100%;
+  }
+</style>
     <div class="accordion accordion-flush container my-4" id="accordionFlushExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingOne">
