--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,16 @@
     Contact
 {% endblock title %}
 {% block body %}
-
+<style>
+  footer{
+    position:fixed;
+  left:0px;
+  bottom:0px;
+  height:30px;
+  text-align: center;
+  width:100%;
+  }
+</style>
 <div class="container my-3">
     <form action="post">
 
