--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,16 @@
 {% extends 'base.html' %} {% block title %} login {% endblock title %} {% block
 body %}
 <!-- login card -->
-
+<style>
+  footer{
+    position:fixed;
+  left:0px;
+  bottom:0px;
+  height:30px;
+  text-align: center;
+  width:100%;
+  }
+</style>
 <div
   class="p-4 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md sm:p-6 lg:p-8 dark:bg-gray-800 dark:border-gray-700 mx-auto my-5"
 >
