--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,16 @@
 
 {% block body %}
     <!-- sign up form starts here -->
-
+    <style>
+      footer{
+        position:fixed;
+      left:0px;
+      bottom:0px;
+      height:30px;
+      text-align: center;
+      width:100%;
+      }
+    </style>
 <div
   class="p-4 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md sm:p-6 lg:p-8 dark:bg-gray-800 dark:border-gray-700 mx-auto my-5"
 >
